--- a/asset/CSS/style.css
+++ b/asset/CSS/style.css
@@ -2,7 +2,6 @@ body {
   
   overflow-x: hidden;
  
-  
 }
 @font-face {
   font-family: 'Gotham';
@@ -56,13 +55,7 @@ body {
     }
   }
   /*whatsapp*/
-  #whatsapp-icon {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    z-index: 9999;
-  }
-  
+
   
  /*slider*/
  .slider {
@@ -219,6 +212,10 @@ div.page-center{
   padding: 20px;
   width: 384px;
 }
+.card-why-privat:hover{
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  
+}
 .why-privat, btn-pesan{
   text-align: center;
   font-family: 'GothamMedium';
@@ -234,19 +231,14 @@ div.page-center{
 }
 @media (max-width: 600px) {
   .card-why-privat {
+    margin:20px 10px;
     width: 100%;
   }
 }
 
-.why-privat, btn-pesan{
-  
-  text-align: center;
-}
-
 .btn-pesan{
   
-  color: #ffff;
-  border-radius: 20rem;
+  text-align: center;
   
 }
 /*end content and card*/
@@ -405,6 +397,35 @@ div.page-center{
     display: block;
   }
 }
+/*product*/
+.btn-product {
+  display: inline-block;
+  padding: 8px 16px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  color: #fff;
+  background-color: #007bff;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-product:hover {
+  background-color: #ff69b4;
+}
+  
+.container-product{
+  background: #ffff;
+  border-radius: 10px;
+  position: relative;
+  margin: auto;
+  width: 100%;
+}
+
+.card:hover{
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
 
                                                   /*Subject-study*/
 /* CSS untuk judul halaman */
@@ -412,8 +433,9 @@ div.page-center{
   background-image: url(../img/bg-lihat-mapel.png);
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  height: 115vh;
   position: relative;
+ 
   
 }
 .subject{
@@ -438,81 +460,130 @@ div.page-center{
   margin-bottom: 30px;
   font-weight: bold;
 }
-.subject-accordion{
-  padding: 1rem;
+.accordion-button:not(.collapsed) {
+  color: #000;
+  background-color: #fff;
+  border-color: #fff;
 }
-/* CSS untuk setiap kontainer mata pelajaran */
-.sbj-cont {
-  margin-bottom: 20px;
-}
-
-/* CSS untuk teks nama mata pelajaran */
-.acordion-sbj-txt {
-  display: flex;
-  align-items: center;
-}
-
-.font-sbj {
-  font-size: 18px;
-  margin: 0;
-  font-weight: 500;
-}
-.font-sbj:hover{
+.accordion-button:focus,
+.accordion-button:active {
   color: #FF77A9;
 }
 
-/* CSS untuk nomor jumlah materi */
-.sbj-number {
-  margin-left: auto;
+/* style untuk accordion */
+.subject-accordion {
+  margin-top: 2rem;
+}
+
+/* style untuk header dari setiap accordion item */
+.accordion-header {
+  background-color: #f5f5f5;
+  border: none;
+}
+
+/* style untuk judul accordion */
+.accordion-button {
+  color: #333;
+  font-size: 1.2rem;
+  text-align: left;
+  width: 100%;
+  padding: 1rem;
+  border: none;
+  outline: none;
+}
+
+/* style untuk accordion body */
+.accordion-body {
+  background-color: #fff;
+  border: none;
+  padding: 1rem;
+}
+.accordion-item {
+  border: none;
+}
+/*section review*/
+
+.slide button {
+  background-color: transparent;
+  
+}
+.testi-title{
+  text-align: center;
+  font-weight: 600;
+  font-size: 20px;
+
+}
+.status{
+  font-size: 20px;
+  color: #8d8d8d;
+  
+}
+.card{
+  border-radius: 25px;
+  background-color: #FFF;
+}
+.image-content,
+.card-content{
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
-  margin-right: 50rem;
-}
+  padding: 50px 14px;
 
-.fnt-number {
-  font-size: 18px;
-  margin: 0;
 }
-
-/* CSS untuk gambar */
-.acordion-sbj-img {
-  margin-left: 10px;
-}
-
-.acordion-sbj-img img {
-  max-width: 30px;
-}
-
-/* CSS untuk daftar dropdown */
-.drp-dwn {
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out, margin-top 0.2s ease-out;
-}
-
-.sbj-list {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.fnt-subject {
-  font-size: 14px;
-  margin-bottom: 5px;
-  padding-left: 20px;
+.image-content{
   position: relative;
-  cursor: pointer;
+  row-gap: 5px;
+  padding: 25px 0;
 }
-
-/* CSS untuk daftar dropdown yang terbuka */
-.show {
-  max-height: 1000px;
-  transition: max-height 0.2s ease-in, margin-top 0.2s ease-in;
-  margin-top: 20px;
+.overlay-testi{
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #4070F4;
+  border-radius: 25px 25px 0 25px;
 }
+.overlay::before,
+.overlay::after{
+  content: '';
+  position: absolute;
+  right: 0;
+  bottom: -40px;
+  height: 40px;
+  width: 40px;
+  background-color: #4070F4;
+}
+.overlay::after{
+  border-radius: 0 25px 0 0;
+  background-color: #FFF;
+}
+.card-image{
+  position: relative;
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  background: #4070F4;
+  padding: 3px;
 
-
+}
+.card-image .card-img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 4px solid #4070F4;
+}
+.name{
+  font-size: 18px;
+  font-weight: 500;
+  color: #333;
+}
+.description{
+  font-size: 14px;
+  color: #707070;
+  text-align: center;
+}
 /*footer*/
 body{margin-top:20px;}
 .footer_area {
